Design registration screens

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,11 @@
     <color name="transparent">#00000000</color>
     <color name="grey1">#737373</color>
     <color name="grey2">#727272</color>
+    <color name="black2">#08090D</color>
+    <color name="red">#FF0000</color>
+    <color name="blue">#0000FF</color>
+    <color name="green">#00FF00</color>
+    <color name="btn_type_reg">#E81F63</color>
+    <color name="grey3">#F7FBFB</color>
+    <color name="grey4">#CC737373</color>
 </resources>
