--- a/app/src/main/res/drawable/shape_field_fill.xml
+++ b/app/src/main/res/drawable/shape_field_fill.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/grey3" />
-
+    <solid android:color="@color/white" />
+    <stroke
+        android:width="2dp"
+        android:color="@color/secondary_choobudo" />
     <corners android:radius="16px" />
 </shape>
