--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,7 @@
     <color name="btn_type_reg">#E81F63</color>
     <color name="grey3">#F7FBFB</color>
     <color name="grey4">#CC737373</color>
+    <color name="button_choobudo">#E81F63</color>
+    <color name="secondary_choobudo">#008FE8</color>
+    <color name="grey5">#A2A2A2</color>
 </resources>
