Design registration screens with the second fragment

--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -32,8 +32,26 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.155" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnLongContributer"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/btn_contributer"
+        android:text="@string/contributing_user"
+        android:textColor="@color/white"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.07"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.228"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.91" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/llTabsContainer"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/shape_tabs_type"
@@ -47,6 +65,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.228"
         app:layout_constraintWidth_default="percent"
+        android:visibility="visible"
         app:layout_constraintWidth_percent="0.91">
 
         <androidx.appcompat.widget.AppCompatButton
