--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -68,7 +68,7 @@
         app:layout_constraintVertical_bias="0.355" />
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etPassword"
+        android:id="@+id/etCountry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/frame_password"
