--- a/app/src/main/res/layout/fragment_reg_association_second.xml
+++ b/app/src/main/res/layout/fragment_reg_association_second.xml
@@ -7,122 +7,108 @@
     tools:context=".fragments.RegFirstFragment">
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvDateBirth"
+        android:id="@+id/tvPNameContact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/private_name"
+        android:text="@string/private_name_contact"
         android:textColor="@color/grey1"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/etUserPName"
+        app:layout_constraintStart_toStartOf="@+id/etFamilyName"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.049" />
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etUserPName"
+        android:id="@+id/etPNameContact"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/shape_field_fill"
-        android:drawableStart="@drawable/ic_vi_user"
+        android:background="@drawable/frame_password"
         android:paddingStart="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_default="percent"
         app:layout_constraintHeight_percent="0.134"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvDateBirth"
+        app:layout_constraintTop_toBottomOf="@+id/tvPNameContact"
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="0.93" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvFamilyNameTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/email"
+        android:textColor="@color/grey1"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/etFamilyName"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.303" />
+
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/etFamilyName"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/shape_field_unfill"
+        android:paddingStart="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.134"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvFamilyNameTitle"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.93" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvMobileTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/mobile"
+        android:textColor="@color/grey1"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/etFamilyName"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.537" />
+
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/etMobileTitle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/shape_field_unfill"
+        android:drawableStart="@drawable/ic_vi_password"
+        android:paddingStart="10dp"
+        app:layout_constraintEnd_toEndOf="@+id/etFamilyName"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.134"
+        app:layout_constraintStart_toStartOf="@+id/etFamilyName"
+        app:layout_constraintTop_toBottomOf="@+id/tvMobileTitle"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.93" />
+
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvEmailTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/family_name"
+        android:text="@string/email"
         android:textColor="@color/grey1"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/etUserPName"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.303" />
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etUserFName"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@drawable/shape_field_fill"
-        android:drawableStart="@drawable/ic_vi_user"
-        android:paddingStart="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent="0.134"
-        app:layout_constraintHorizontal_bias="0.551"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvEmailTitle"
-        app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent="0.93" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvCityTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/selected_association"
-        android:textColor="@color/grey1"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/etUserPName"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.537" />
-
-    <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@drawable/shape_field_unfill"
-        app:layout_constraintEnd_toEndOf="@+id/etUserFName"
-        app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent="0.134"
-        app:layout_constraintStart_toStartOf="@+id/etUserFName"
-        app:layout_constraintTop_toBottomOf="@+id/tvCityTitle"
-        app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent="0.93">
-
-        <androidx.appcompat.widget.AppCompatSpinner
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/transparent" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_gravity="center"
-            android:layout_marginEnd="5dp"
-            android:contentDescription="@string/app_name"
-            app:srcCompat="@drawable/arrow_down" />
-    </RelativeLayout>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvCountryTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/didnt_find"
-        android:textColor="@color/grey1"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/etUserPName"
+        app:layout_constraintStart_toStartOf="@+id/etFamilyName"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.771" />
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etCountry"
+        android:id="@+id/etEmail"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/shape_field_unfill"
+        android:drawableStart="@drawable/ic_vi_password"
         android:paddingStart="10dp"
         app:layout_constraintHeight_default="percent"
         app:layout_constraintHeight_percent="0.134"
-        app:layout_constraintStart_toStartOf="@+id/tvCountryTitle"
-        app:layout_constraintTop_toBottomOf="@+id/tvCountryTitle"
+        app:layout_constraintStart_toStartOf="@+id/tvEmailTitle"
+        app:layout_constraintTop_toBottomOf="@+id/tvEmailTitle"
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="0.93" />
 
