--- a/app/src/main/res/layout/fragment_reg_second_association.xml
+++ b/app/src/main/res/layout/fragment_reg_second_association.xml
@@ -22,7 +22,7 @@
         android:id="@+id/etPNameContact"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/frame_password"
+        android:background="@drawable/shape_field_unfill"
         android:paddingStart="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_default="percent"
