--- a/app/src/main/res/layout/fragment_reg_first.xml
+++ b/app/src/main/res/layout/fragment_reg_first.xml
@@ -86,6 +86,7 @@
         app:layout_constraintWidth_percent="0.93">
 
         <androidx.appcompat.widget.AppCompatSpinner
+            android:id="@+id/spAssociation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/transparent" />
@@ -102,7 +103,7 @@
     </RelativeLayout>
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvCountryTitle"
+        android:id="@+id/tvNotFindAssociationTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/didnt_find"
@@ -114,15 +115,15 @@
         app:layout_constraintVertical_bias="0.771" />
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etCountry"
+        android:id="@+id/etNotFindAssociation"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/shape_field_unfill"
         android:paddingStart="10dp"
         app:layout_constraintHeight_default="percent"
         app:layout_constraintHeight_percent="0.134"
-        app:layout_constraintStart_toStartOf="@+id/tvCountryTitle"
-        app:layout_constraintTop_toBottomOf="@+id/tvCountryTitle"
+        app:layout_constraintStart_toStartOf="@+id/tvNotFindAssociationTitle"
+        app:layout_constraintTop_toBottomOf="@+id/tvNotFindAssociationTitle"
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="0.93" />
 
