--- a/app/src/main/res/layout/fragment_reg_second.xml
+++ b/app/src/main/res/layout/fragment_reg_second.xml
@@ -73,6 +73,7 @@
         app:layout_constraintVertical_bias="0.537" />
 
     <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/etCity"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/shape_field_fill"
